--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -22,6 +22,14 @@ set(OVERVIEW overview)
 set(OBJECT_POOL object_pool)
 set(THREAD_POOL thread_pool)
 
+set(STREAM stream)
+set(IS_LAMBDA is_lambda)
+set(SORT_TUPLE sort_tuple)
+set(YCOMBINATOR ycombinator)
+set(UNIQUE_TUPLE unique_tuple)
+set(MEMOIZED_INVOKE memoized_invoke)
+set(TUPLE_ALGORITHM tuple_algorithm)
+
 add_executable(${CURRY} curry.cpp)
 add_executable(${TENSOR} tensor.cpp)
 add_executable(${MONSTER} monster.cpp)
@@ -29,6 +37,15 @@ add_executable(${OVERVIEW} overview.cpp)
 add_executable(${OBJECT_POOL} object_pool.cpp)
 add_executable(${THREAD_POOL} thread_pool.cpp)
 
+add_executable(${STREAM} stream.cpp)
+add_executable(${IS_LAMBDA} is_lambda.cpp)
+add_executable(${SORT_TUPLE} sort_tuple.cpp)
+add_executable(${YCOMBINATOR} ycombinator.cpp)
+add_executable(${UNIQUE_TUPLE} unique_tuple.cpp)
+add_executable(${MEMOIZED_INVOKE} memoized_invoke.cpp)
+add_executable(${TUPLE_ALGORITHM} tuple_algorithm.cpp)
+
 target_link_libraries(${THREAD_POOL} pthread)
 
-install(TARGETS ${CURRY} ${TENSOR} ${MONSTER} ${OVERVIEW} ${OBJECT_POOL} ${THREAD_POOL} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
+install(TARGETS ${CURRY} ${TENSOR} ${MONSTER} ${OVERVIEW} ${OBJECT_POOL} ${THREAD_POOL} ${YCOMBINATOR} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
+install(TARGETS ${STREAM} ${IS_LAMBDA} ${SORT_TUPLE} ${UNIQUE_TUPLE} ${MEMOIZED_INVOKE} ${TUPLE_ALGORITHM} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
