--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -27,6 +27,7 @@ set(LOOP_UNROLL loop_unroll)
 set(STREAM stream)
 set(IS_LAMBDA is_lambda)
 set(SORT_TUPLE sort_tuple)
+set(UNIQUE_TUPLE unique_tuple)
 set(YCOMBINATOR ycombinator)
 set(MEMOIZED_INVOKE memoized_invoke)
 set(TUPLE_ALGORITHM tuple_algorithm)
@@ -44,6 +45,7 @@ add_executable(${LOOP_UNROLL} loop_unroll.cpp)
 add_executable(${STREAM} stream.cpp)
 add_executable(${IS_LAMBDA} is_lambda.cpp)
 add_executable(${SORT_TUPLE} sort_tuple.cpp)
+add_executable(${UNIQUE_TUPLE} unique_tuple.cpp)
 add_executable(${YCOMBINATOR} ycombinator.cpp)
 add_executable(${MEMOIZED_INVOKE} memoized_invoke.cpp)
 add_executable(${TUPLE_ALGORITHM} tuple_algorithm.cpp)
@@ -52,4 +54,4 @@ add_executable(${COMPILER_DETECTOR} compiler_detector.cpp)
 target_link_libraries(${THREAD_POOL} pthread)
 
 install(TARGETS ${ARITY} ${CURRY} ${TENSOR} ${MONSTER} ${OVERVIEW} ${OBJECT_POOL} ${THREAD_POOL} ${YCOMBINATOR} ${LOOP_UNROLL} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
-install(TARGETS ${STREAM} ${IS_LAMBDA} ${SORT_TUPLE} ${MEMOIZED_INVOKE} ${TUPLE_ALGORITHM} ${COMPILER_DETECTOR} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
+install(TARGETS ${STREAM} ${IS_LAMBDA} ${SORT_TUPLE} ${UNIQUE_TUPLE} ${MEMOIZED_INVOKE} ${TUPLE_ALGORITHM} ${COMPILER_DETECTOR} DESTINATION ${PROJECT_SOURCE_DIR}/bin)
